# soundboard

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  diesel.toml  myinstants_soundboard.toml  solrosin_soundboard.toml  soundboard.toml
.github/workflows/: build.yml  build_release.yml  format_and_clippy.yml  test.yml
examples/: .gitignore
examples/letter/: main.rs
migrations/2020-07-03-142044_create_soundboards/: down.sql  up.sql
migrations/2020-07-03-142047_create_sounds/: down.sql  up.sql
migrations/2020-07-03-142056_create_soundboard_sound/: down.sql  up.sql
migrations/2020-07-03-142105_create_settings/: up.sql
presentation/: fu-beamer-template.tex  main.html  main.md  main.tex
scripts/: .gitignore  101soundboards_download.py  converter_new_format.py  myinstants_scraper.py  myinstants_soundboard.toml  soundboardcom_download.py
soundboards/: deutsche_memes_soundboard.toml  duke_nukem.toml  favorites.toml  myinstants.com_200.toml  myinstants.com_200.toml_disabled  myinstants.com_5.toml  myinstants.com_5.toml_disabled  myinstants.com_50.toml  myinstants.toml  solrosin_soundboard.toml
soundboards/favorites/: ich-rascht-aus.flac
soundboards/solrosin_soundboard/: ich-rascht-aus.flac
sounds/vodka/: Razor1911 - Soldier Of Fortune intro.xm
src/: app_config.rs  config.rs  download.rs  gui.rs  hotkey.rs  http_server.rs  linux.rs  main.rs  pulseauto.rs  sound.rs  soundboards.rs  telegram.rs  tui.rs  utils.rs
src/app_config/: helpers.rs
src/config/: helpers.rs  schema.rs  sqlite.rs
src/download/: ttsclient.rs
src/download/ttsclient/: google_cloud_texttospeech_v1.rs
src/gui/: Cargo.toml  list_view.rs  panel_view.rs  style.rs
src/gui/src/: example.rs
src/gui_example/src/: main.rs
src/sound/: sample.rs  sink.rs  source.rs
src/sound/decoder/: flac.rs  mod.rs  mp3.rs  opus.rs  vorbis.rs  wav.rs  xm.rs
src/soundboards/: helpers.rs
src/tui/: sound_state_list.rs
tls/: cert.pem  key.rsa
vue/: package-lock.json  package.json
vue/public/: index.html
vue/src/assets/: index.css  old.html
vue/src/components/: HelloWorld.vue  Soundboard.vue  old.js
vue_unused/: README.md  package-lock.json_need_fix
vue_unused/src/: App.vue  main.js
vue_unused/src/components/: ControlBar.vue
web/: index.html
web/css/: index.css
web/ext/: buefy_0_8_20.min.css  buefy_0_8_20.min.js  font-awesome_4_7_0.min.css
web/js/: index.js
