[package]
authors = ["Karl Skomski <karl@skomski.com>", "Corin Baurmann <corin.baurmann@fu-berlin.de>", "Elena Frank <elena.frank@protonmail.com>"]
categories = ["multimedia::audio"]
description = "cross-plattform soundboard: play sounds over your microphone"
edition = "2018"
exclude = [
  "/soundboards",
  "/extern",
]
license = "Unlicense"
name = "soundboard"
repository = "https://github.com/gamebooster/soundboard"
version = "0.0.2"

[profile.release]
codegen-units = 1
lto = "fat"

[features]
autoloop = ["libpulse-binding", "ctrlc"]
default = ["mp3", "flac", "vorbis", "wav", "http", "opus"]
flac = ["claxon"]
full = ["default", "spotify", "telegram-bot", "xm", "textui", "gui", "text-to-speech"]
gui = ["iced", "iced_native"]
http = ["warp", "futures"]
mp3 = ["minimp3", "mp3-duration"]
opus = ["audiopus", "ogg", "ogg_metadata"]
spotify = ["librespot", "tokio-core"]
telegram-bot = ["tgbot", "fuzzy-matcher"]
text-to-speech = ["tonic", "prost"]
textui = ["tui", "crossterm"]
vorbis = ["lewton", "ogg_metadata"]
wav = ["hound"]
xm = ["libxm-soundboard"]

[dependencies]
anyhow = "1"
backtrace = "0.3"
bytes = "0.5"
clap = "3.0.0-beta.1"
crossbeam-channel = "0.4"
dirs = "3"
env_logger = "0.7"
hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.2"}
indexmap = "1.5"
log = "0.4"
mime_guess = "2.0.3"
miniaudio = "0.10.0"
once_cell = "1.4"
owning_ref = "0.4"
parking_lot = "0.11"
regex = "1"
reqwest = {version = "0.10", features = ["blocking"]}
rust-embed = {version = "5.6.0", features = ["interpolate-folder-path"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
toml = "0.5"
ulid = {version = "0.4", features = ["serde"]}
webbrowser = "0.5.5"
winit = "0.22"

prost = {version = "0.6", optional = true}
tonic = {version = "0.3.0", features = ["prost", "tls", "tls-roots"], optional = true}

fuzzy-matcher = {version = "0.3", optional = true}
tgbot = {version = "0.10", optional = true}

librespot = {version = "0.1.3", optional = true, default-features = false}
tokio-core = {version = "0.1", optional = true}

ctrlc = {version = "3.1.6", features = ["termination"], optional = true}
libpulse-binding = {version = "2.16", features = ["pa_latest_common"], optional = true}

iced = {version = "0.1", optional = true, features = ["tokio"]}
iced_native = {version = "0.2", optional = true}

futures = {version = "0.3", optional = true}
warp = {version = "0.2", optional = true}

audiopus = {version = "0.2", optional = true}
claxon = {version = "0.4", optional = true}
hound = {version = "3", optional = true}
lewton = {version = "0.10", optional = true}
libxm-soundboard = {version = "0.0.2", path = "extern/libxm-rs", optional = true}
minimp3 = {version = "0.3", optional = true}
mp3-duration = {version = "0.1.10", optional = true}
ogg = {version = "0.7", optional = true}
ogg_metadata = {version = "0.4", optional = true}

crossterm = {version = "0.17", optional = true}
tui = {version = "0.10", optional = true, default-features = false, features = ['crossterm']}

[build-dependencies]
fs_extra = "1"
