[package]
authors = ["Karl Skomski <karl@skomski.com>", "Corin Baurmann <corin.baurmann@fu-berlin.de>", "Elena Frank <elena.frank@protonmail.com>"]
categories = ["multimedia::audio"]
description = "cross-plattform soundboard: play sounds over your microphone"
edition = "2021"
exclude = [
  "/soundboards",
  "/extern",
]
license = "AGPL-3.0-or-later"
name = "soundboard"
repository = "https://github.com/gamebooster/soundboard"
version = "0.1.1"

[profile.release]
codegen-units = 1
lto = "fat"

[features]
autoloop = ["libpulse-binding", "ctrlc", "nix"]
default = ["mp3", "flac", "vorbis", "wav", "http", "opus"]
flac = ["claxon"]
full = ["default", "spotify", "telegram-bot", "xm", "textui", "gui", "text-to-speech"]
gui = ["iced", "iced_native", "iced_futures"]
http = ["warp", "futures"]
mp3 = ["minimp3", "mp3-duration"]
opus = ["audiopus", "ogg", "ogg_metadata"]
spotify = ["librespot"]
telegram-bot = ["tgbot", "fuzzy-matcher"]
text-to-speech = ["tonic", "prost"]
textui = ["tui", "crossterm"]
vorbis = ["lewton", "ogg_metadata"]
wav = ["hound"]
xm = ["libxm-soundboard"]

[dependencies]
anyhow = "1"
backtrace = "0.3"
bytes = "1"
clap = {version = "3", features = ["cargo"]}
crossbeam-channel = "0.5"
dirs = "4"
env_logger = "0.9"
hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.3"}
indexmap = "1.6"
log = "0.4"
mime_guess = "2.0.3"
miniaudio = "0.10.0"
msgbox = "0.6"
once_cell = "1.5"
owning_ref = "0.4"
parking_lot = "0.12"
paste = "1.0"
regex = "1"
reqwest = {version = "0.11", features = ["blocking"]}
rust-embed = {version = "6", features = ["interpolate-folder-path"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1"
tokio = {version = "1", features = ["macros", "full", "sync", "time"]}
tokio-stream = "0.1"
toml = "0.5"
ulid = {version = "0.5", features = ["serde"]}
webbrowser = "0.5.5"
winit = "0.26"

prost = {version = "0.9", optional = true}
tonic = {version = "0.6", features = ["prost", "tls", "tls-roots"], optional = true}

fuzzy-matcher = {version = "0.3", optional = true}
tgbot = {version = "0.17", optional = true}
async-trait = "0.1"

librespot = {version = "0.3", optional = true, default-features = false}

ctrlc = {version = "3.1", features = ["termination"], optional = true}
libpulse-binding = {version = "2.22", default-features = false, features = ["pa_v8"], optional = true}
nix = {version = "0.23", optional = true}

iced = {version = "0.3", optional = true, features = ["tokio"] }
iced_native = {version = "0.4", optional = true}
iced_futures = {version = "0.3", optional = true}

futures = {version = "0.3", optional = true}
warp = {version = "0.3", optional = true}

audiopus = {version = "0.2", optional = true}
claxon = {version = "0.4", optional = true}
hound = {version = "3", optional = true}
lewton = {version = "0.10", optional = true}
libxm-soundboard = {version = "0.0.3", path = "extern/libxm-rs", optional = true}
minimp3 = {version = "0.5", optional = true}
mp3-duration = {version = "0.1.10", optional = true}
ogg = {version = "0.8", optional = true}
ogg_metadata = {version = "0.4", optional = true}

crossterm = {version = "0.22", optional = true}
tui = {version = "0.17", optional = true, default-features = false, features = ['crossterm']}

[build-dependencies]
fs_extra = "1"
tonic-build = "0.6"